--- a/login.html
+++ b/login.html
@@ -18,12 +18,14 @@
         </div>
         <div class="section">
             <h2>Connexion</h2>
-            <form id="registerForm" action="register.php" method="post">
+            
+            <form id="loginForm" action="login.php" method="post">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
                 <br>
                 <label for="username">Pseudo:</label>
                 <input type="text" id="username" name="username" required>
+                <br>
                 <button type="submit">Se connecter</button>
             </form>        </div>
         <div class="footer">
