--- a/vous.html
+++ b/vous.html
@@ -27,6 +27,8 @@
             <div class="profile-info">
                 <h2>Photo de profil</h2>
                 <p id="pseudoPlaceholder"></p>
+                <p id="firstNamePlaceholder"></p>
+                <p id="lastNamePlaceholder"></p>
                 <input type="file" id="fileInput" accept="image/*" style="display: none;">
                 <button onclick="document.getElementById('fileInput').click();">Choisir une photo</button>
                 <img id="profileImage" alt="Profile Image">
@@ -70,14 +72,21 @@
 
     <script>
         window.onload = function() {
-            const params = new URLSearchParams(window.location.search);
-            const pseudo = params.get('pseudo');
-            if (pseudo) {
-                document.getElementById('pseudoPlaceholder').innerText = "Pseudo : " + pseudo;
-            }
-        }
+            fetch('vous2.php')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        console.error(data.error);
+                    } else {
+                        document.getElementById('pseudoPlaceholder').innerText = "Pseudo : " + data.username;
+                        document.getElementById('firstNamePlaceholder').innerText = "Prénom : " + data.first_name;
+                        document.getElementById('lastNamePlaceholder').innerText = "Nom : " + data.last_name;
+                    }
+                })
+                .catch(error => console.error('Erreur:', error));
 
-        document.getElementById('fileInput').addEventListener('change', displaySelectedImage);
+            document.getElementById('fileInput').addEventListener('change', displaySelectedImage);
+        }
 
         function displaySelectedImage(event) {
             const selectedFile = event.target.files[0];
