--- a/vous.html
+++ b/vous.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vous | ECE In</title>
     <link rel="stylesheet" href="vous.css">
+    <link rel="stylesheet" href="accueil.css">
     <script src="vous.js" defer></script>
     <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
+            
             <div>ECE In: Social Media Professionnel de l’ECE Paris</div>
             <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
@@ -68,6 +70,11 @@
                     <!-- Le contenu du CV sera affiché ici -->
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            <p>Nous contacter :</p>
+            <p>Email : <a href="mailto:admissions-paris@ece.fr">admissions-paris@ece.fr</a></p>
+            <p>Téléphone : <a href="tel:0123456789">01.44.39.06.00</a></p>
         </div>
     </div>
 
