--- a/ajout.html
+++ b/ajout.html
@@ -14,7 +14,8 @@
             <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
-            <a href="menu.html" class="active">Menu</a>
+            <a href="menu.html">Menu</a>
+            <a href="ajout.html" class="active">Ajouter un utilisateur</a>
             <a href="suppression.html">Supprimer un utilisateur</a>
         </div>
         <div class="section">   
