--- a/suppression.html
+++ b/suppression.html
@@ -14,8 +14,9 @@
             <img src="ECE_LOGO_2021_web.png" alt="ECE In Logo">
         </div>
         <div class="navigation">
-            <a href="menu.html" class="active">Menu</a>
+            <a href="menu.html">Menu</a>
             <a href="ajout.html">Ajouter un utilisateur</a>
+            <a href="suppression.html" class="active">Supprimer un utilisateur</a>
         </div>
         <div class="section">   
             <form id="deleteUserForm" action="suppression.php" method="post">
