--- a/ajout.html
+++ b/ajout.html
@@ -15,6 +15,7 @@
         </div>
         <div class="navigation">
             <a href="menu.html">Menu</a>
+            <a href="vous.html">Vous</a>
             <a href="ajout.html" class="active">Ajouter un utilisateur</a>
             <a href="suppression.html">Supprimer un utilisateur</a>
         </div>
