--- a/suppression.html
+++ b/suppression.html
@@ -15,6 +15,7 @@
         </div>
         <div class="navigation">
             <a href="menu.html">Menu</a>
+            <a href="vous.html">Vous</a>
             <a href="ajout.html">Ajouter un utilisateur</a>
             <a href="suppression.html" class="active">Supprimer un utilisateur</a>
         </div>
