elia modif emploi

--- a/emplois.html
+++ b/emplois.html
@@ -39,9 +39,9 @@
                 <h2>Liste des emplois</h2>
                 <ul id="jobList">
                     <!-- Les offres d'emplois seront affichées ici -->
-                    <li>Offre d'emploi 1</li>
-                    <li>Offre d'emploi 2</li>
-                    <li>Offre d'emploi 3</li>
+                    <li>Ingénieur Data - CDI - Temps plein - 2000€ - Paris</li>
+                    <li>Stage Systèmes embarqués - Stage - Temps partiel - 0€ - Paris</li>
+                    <li>Alternance cybersécurité - Alternance - Temps plein - 1000€ - Paris</li>
                 </ul>
             </div>
             <div class="right-panel">
@@ -56,6 +56,11 @@
                         <option value="CDI">CDI</option>
                         <option value="Stage">Stage</option>
                         <option value="Alternance">Alternance</option>
+                    </select>
+                    <label for="contractTypee">Autre</label>
+                    <select id="contractTypee" name="contractType" required>
+                        <option value="Temps partiel">Temps partiel</option>
+                        <option value="Temps plein">Temps plein</option>
                     </select>
 
                     <label for="salary">Salaire :</label>
