elia modif emplois

--- a/emplois.html
+++ b/emplois.html
@@ -58,7 +58,7 @@
                         <option value="Alternance">Alternance</option>
                     </select>
                     <label for="contractTypee">Autre</label>
-                    <select id="contractTypee" name="contractType" required>
+                    <select id="contractTypee" name="contractTypee" required>
                         <option value="Temps partiel">Temps partiel</option>
                         <option value="Temps plein">Temps plein</option>
                     </select>
