elia modif emplois

--- a/emplois.html
+++ b/emplois.html
@@ -57,12 +57,13 @@
                         <option value="Stage">Stage</option>
                         <option value="Alternance">Alternance</option>
                     </select>
-                    <label for="contractTypee">Autre</label>
-                    <select id="contractTypee" name="contractTypee" required>
-                        <option value="Temps partiel">Temps partiel</option>
+                    
+                    <label for="employmentType">Temps plein ou partiel :</label>
+                    <select id="employmentType" name="employmentType" required>
                         <option value="Temps plein">Temps plein</option>
+                        <option value="Temps partiel">Temps partiel</option>
                     </select>
-
+                    
                     <label for="salary">Salaire :</label>
                     <input type="number" id="salary" name="salary" required>
 
