--- a/accueil.html
+++ b/accueil.html
@@ -107,12 +107,41 @@
                         .catch(error => console.error('Erreur:', error));
                 });
             </script>
-            <h4>Évènements existants</h4>
-                <h4>Évènements existants</h4>
 
-            <div id="events">
-                <?php include 'fetch_events2.php'; ?>
+<h4>Évènements existants</h4>
+            <div id="eventsList">
+                <!-- Les événements seront chargés ici par JavaScript -->
             </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        fetch('fetch_events2.php')
+            .then(response => response.json())
+            .then(data => {
+                const eventsList = document.getElementById('eventsList');
+                data.forEach(event => {
+                    const eventItem = document.createElement('div');
+                    eventItem.innerHTML = `
+                        <h3>${event.title}</h3>
+                        <p>${event.description}</p>
+                        <p><strong>Date:</strong> ${event.event_date}</p>
+                        <p><strong>Lieu:</strong> ${event.location}</p>
+                        <form action="delete_event.php" method="post" style="display:inline-block;">
+                            <input type="hidden" name="event_id" value="${event.event_id}">
+                            <button type="submit">Supprimer</button>
+                        </form>
+                        <form action="edit_event.php" method="get" style="display:inline-block;">
+                            <input type="hidden" name="event_id" value="${event.event_id}">
+                            <button type="submit">Modifier</button>
+                        </form>
+                    `;
+                    eventsList.appendChild(eventItem);
+                });
+            })
+            .catch(error => console.error('Erreur:', error));
+    });
+</script>
+
             
         </div>
         <div class="footer">
