--- a/messagerie.html
+++ b/messagerie.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="accueil.css">
     <link rel="stylesheet" href="carousel.css">
     <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messagerie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         #messages {
@@ -52,7 +49,7 @@
                     <!-- Receiver options will be loaded here -->
                 </select>
                 <input type="text" id="content" class="form-control" placeholder="Type your message" required>
-                <button type="submit" class="btn btn-primary">Send</button>
+                <button type="submit" class="btn btn-primary">envoyer</button>
             </div>
         </form>
         <button id="teamsButton" class="btn btn-secondary">Rejoindre par Teams</button>
@@ -63,8 +60,7 @@
         function loadMessages() {
             const sender_id = $('#sender_id').val();
             const receiver_id = $('#receiver_id').val();
-            console.log('Loading messages between', sender_id, 'and', receiver_id); // Debug log
-
+            console.log('Loading messages:', { sender_id, receiver_id }); // Debug log
             $.get('messages.php', { sender_id, receiver_id }, function(data) {
                 console.log('Messages loaded:', data); // Debug log
                 const messages = JSON.parse(data);
@@ -77,6 +73,38 @@
                 console.error('Error loading messages:', error); // Debug log
             });
         }
+
+        function submitMessage() {
+            const sender_id = $('#sender_id').val();
+            const receiver_id = $('#receiver_id').val();
+            const content = $('#content').val();
+            console.log('Sending message:', { sender_id, receiver_id, content }); // Debug log
+
+            $.post('messages.php', { sender_id, receiver_id, message: content }, function(data) {
+                console.log('Message sent response:', data); // Debug log
+                const response = JSON.parse(data);
+                if (response.status === 'Message sent successfully') {
+                    $('#content').val('');
+                    loadMessages();
+                } else {
+                    console.error('Failed to send message:', response); // Debug log
+                }
+            }).fail(function(xhr, status, error) {
+                console.error('Error sending message:', error); // Debug log
+            });
+        }
+
+        $('#messageForm').on('submit', function(e) {
+            e.preventDefault();
+            submitMessage();
+        });
+
+        $('#content').on('keydown', function(e) {
+            if (e.keyCode === 13) {
+                e.preventDefault();
+                submitMessage();
+            }
+        });
 
         function loadUsers() {
             $.get('users.php', function(data) {
@@ -91,25 +119,6 @@
                 console.error('Error loading users:', error); // Debug log
             });
         }
-
-        $('#messageForm').on('submit', function(e) {
-            e.preventDefault();
-            const sender_id = $('#sender_id').val();
-            const receiver_id = $('#receiver_id').val();
-            const content = $('#content').val();
-            console.log('Sending message:', { sender_id, receiver_id, content }); // Debug log
-
-            $.post('messages.php', { sender_id, receiver_id, content }, function(data) {
-                console.log('Message sent response:', data); // Debug log
-                const response = JSON.parse(data);
-                if (response.status === 'Message sent successfully') {
-                    $('#content').val('');
-                    loadMessages();
-                }
-            }).fail(function(xhr, status, error) {
-                console.error('Error sending message:', error); // Debug log
-            });
-        });
 
         loadUsers();
         loadMessages();
