--- a/profil.html
+++ b/profil.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Réseau | ECE In</title>
+    <title>Profil Utilisateur | ECE In</title>
     <link rel="stylesheet" href="accueil.css">
-    <link rel="stylesheet" href="reseaux.css">
+    <link rel="stylesheet" href="profil.css">
     <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -17,23 +17,16 @@
         </div>
         <div class="navigation">
             <a href="accueil.html">Accueil</a>
-            <a href="reseaux.html" class="active">Mon Réseau</a>
+            <a href="reseaux.html">Mon Réseau</a>
             <a href="vous.html">Vous</a>
             <a href="notifications.html">Notifications</a>
             <a href="messagerie.html">Messagerie</a>
             <a href="emplois.html">Emplois</a>
         </div>
         <div class="section">
-            <h1>Mon Réseau</h1>
-            <div class="search-bar">
-                <input type="text" id="search-input" class="form-control" placeholder="Rechercher des utilisateurs par pseudo...">
-                <button id="search-btn" class="btn btn-primary">Rechercher</button>
-            </div>
-            <div id="search-results" class="mt-3">
-                <!-- Search results will be inserted here by JavaScript -->
-            </div>
-            <div id="connections-list" class="mt-3">
-                <!-- User profiles will be inserted here by JavaScript -->
+            <h1>Profil Utilisateur</h1>
+            <div id="user-profile">
+                <!-- User profile will be inserted here by JavaScript -->
             </div>
         </div>
         <div class="footer">
@@ -43,6 +36,6 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="reseaux.js"></script>
+    <script src="profil.js"></script>
 </body>
 </html>
