--- a/emplois.html
+++ b/emplois.html
@@ -18,6 +18,10 @@
             border-radius: 5px;
             z-index: 1000;
         }
+        .left-panel h1,
+        .right-panel h1 {
+            color: #1e73be; 
+        }
     </style>
 </head>
 <body>
@@ -36,7 +40,7 @@
         </div>
         <div class="container">
             <div class="left-panel">
-                <h2>Liste des emplois</h2>
+                <h1>Liste des emplois</h1>
                 <ul id="jobList">
                     <!-- Les offres d'emplois seront affichées ici -->
                     <li>Ingénieur Data - CDI - Temps plein - 2000€ - Paris</li>
