--- a/messagerie.html
+++ b/messagerie.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/vnd.icon" href="ECE_LOGO_2021_web.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        .text-white {
+            color: white;
+        }
         #messages {
             max-height: 400px;
             overflow-y: auto;
@@ -125,5 +128,6 @@
             window.open('https://teams.microsoft.com/l/meetup-join/19%3ameeting_OTY3YzRmODMtMTYyNS00MGI2LTgxMjAtMmI4NzRjNTQzNjEw%40thread.v2/0?context=%7b%22Tid%22%3a%22a2697119-66c5-4126-9991-b0a8d15d367f%22%2c%22Oid%22%3a%2227972e9c-97cd-4f79-9bd1-2614a4b9c092%22%7d', '_blank');
         });
     </script>
+    <p class = "text-white">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.,</p>
 </body>
 </html>
