--- a/vous.html
+++ b/vous.html
@@ -31,7 +31,7 @@
                 <p id="pseudoPlaceholder"></p>
                 <p id="firstNamePlaceholder"></p>
                 <p id="lastNamePlaceholder"></p>
-                <img id="profileImage" alt="Profile Image">
+                <img id="profileImage" alt="Profile Image" style="width: 30%; height: auto;">
                 <img id="backgroundImage" alt="Background Image" style="width: 100%; height: auto;">
                 <input type="file" id="fileInput" accept="image/*" style="display: none;">
 
